--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -33,11 +33,9 @@
                             </div>
                         </div>
                         <div class="content job">
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" name="optionsCheckboxes">
-                                    Short URL
-                                </label>
+                            <input type="checkbox" name="optionsCheckboxes">
+                            <div class="checkbox-label">
+                                <label class="checkbox-label">Short URL</label>
                             </div>
                         </div>
                         <div class="btn btn-primary">Save</div>
