--- a/tinker/admin/publish/templates/publish-program-feeds.html
+++ b/tinker/admin/publish/templates/publish-program-feeds.html
@@ -1,19 +1,27 @@
 {% extends "tinker_base.html" %}
 
-{% block title %}Home{% endblock %}
+{% set title='Publish Manager' %}
 
 {% block styles %}
-  <style type="text/css">
-  </style>
+    <style type="text/css">
+    </style>
 {% endblock %}
 
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
-<h3>Publish Program Feeds</h3>
+    <div class="content">
+        <div class="container-fluid">
+            <div class="col-md-12">
+                <h3 class="subtitle">Publish Program Feeds</h3>
+                <br/>
 
-<a href='/admin/publish-manager/program-feeds/staging' class="button">Publish to Staging</a>
-<a href='/admin/publish-manager/program-feeds/production' class="button">Publish to Production and Staging</a>
-
+                <a href='/admin/publish-manager/program-feeds/staging' class="btn btn-primary">Publish to Staging</a>
+                <a href='/admin/publish-manager/program-feeds/production' class="btn btn-primary">Publish to Production
+                    and
+                    Staging</a>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
