--- a/tinker/e_announcements/templates/form.html
+++ b/tinker/e_announcements/templates/form.html
@@ -45,8 +45,8 @@
                        value="{{ e_announcement_id }}"/>
             {% endif %}
             {% if form.errors %}
-                <div class="alert alert-error">
-                    <div data-alert class="alert-box alert radius">
+                <div class="error-alert">
+                    <div data-alert class="red-alert">
                         There were errors with your form.
                         <a href="#" class="close">&times;</a>
                     </div>
@@ -58,8 +58,8 @@
 
                 {# Print any errors for this field#}
                 {% for error in form.errors[field.name] %}
-                    <div class="alert alert-error">
-                        <div data-alert class="alert-box alert radius">
+                    <div class="error-alert">
+                        <div data-alert class="red-alert">
                             {{ error }}
                             <a href="#" class="close">&times;</a>
                         </div>
@@ -86,7 +86,8 @@
                 {% elif field.type == "MultiCheckboxField" %}
                     <h4 class='audience-header' for="{{ field.name }}">
                         Audiences
-                        <small class="required" style="font-size: 47%">{% if field.flags.required %}Required{% endif %}</small>
+                        <small class="required" style="font-size: 47%">{% if field.flags.required %}
+                            Required{% endif %}</small>
                     </h4>
                     {% if field.description != '' %}
                         <p>{{ field.description }}</p>
@@ -99,18 +100,15 @@
                             {% for item in field %}
                                 {% if column in item.object_data %}
                                     {# zero-based indexing #}
-                                    {#                                            {{ item }}#}
-                                    <div class="checkbox">
-                                        <label>
-                                            <input type="checkbox" name="optionsCheckboxes" unchecked>
-                                            {{ brm[loop.index - 1] }}
-                                        </label>
+                                    {{ item }}
+{#                                    <input id="banner_roles-{{ loop.index - 1 }}" name="banner_roles" type="checkbox">#}
+                                    <div class="checkbox-label">
+                                        <label class="checkbox-label">{{ brm[loop.index - 1] }}</label>
                                     </div>
                                 {% endif %}
                             {% endfor %}
                         </div>
                     {% endfor %}
-{#                    <hr/>#}
 
                 {% elif field.type == "HeadingField" %}
                     <h3 class="subtitle">{{ field.label }}</h3>
@@ -162,44 +160,49 @@
 
     <script src="{{ url_for('static', filename='moment.js') }}"></script>
     <script src="{{ url_for('static', filename='ckeditor/ckeditor.js') }}"></script>
+    <script src="{{ url_for('static', filename='csrf-activator.js') }}"></script>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='pikaday.css') }}">
     <script src="{{ url_for('static', filename='pikaday.js') }}"></script>
     <script src="{{ url_for('static', filename='pikaday.jquery.js') }}"></script>
 
     <script type="text/javascript">
-
         $(document).ready(function () {
-            var today = new Date();
-            $('.datepicker').each(function (index) {
-                var picker = new Pikaday({
-                    field: this,
-                    disabledDaysOfWeek: [0, 2, 4, 6],
-                    disabledDates: ['12/24', '12/25', '12/26', '12/27', '12/28', '12/29', '12/30', '12/31', '01/01'],
-                    format: 'MM-DD-YYYY',
-                    disableDayFn: function (date) {
-                        // remove all Sun/Tues/Thur/Sat days from the week
-                        if ($.inArray(date.getDay(), [0, 2, 4, 6]) > -1) {
-                            return date;
-                        }
+            var csrftoken = "{{ csrf_token() }}";
+            activateCSRF(csrftoken);
 
-                        // the last time you can submit a announcement is 1pm the previous business day.
-                        var dateCutoff = date;
-                        dateCutoff.setDate(dateCutoff.getDate() - 1);
-                        while (dateCutoff.getDay() == 0 || dateCutoff.getDay() == 6) {
+            $(document).ready(function () {
+                var today = new Date();
+                $('.datepicker').each(function (index) {
+                    var picker = new Pikaday({
+                        field: this,
+                        disabledDaysOfWeek: [0, 2, 4, 6],
+                        disabledDates: ['12/24', '12/25', '12/26', '12/27', '12/28', '12/29', '12/30', '12/31', '01/01'],
+                        format: 'MM-DD-YYYY',
+                        disableDayFn: function (date) {
+                            // remove all Sun/Tues/Thur/Sat days from the week
+                            if ($.inArray(date.getDay(), [0, 2, 4, 6]) > -1) {
+                                return date;
+                            }
+
+                            // the last time you can submit a announcement is 1pm the previous business day.
+                            var dateCutoff = date;
                             dateCutoff.setDate(dateCutoff.getDate() - 1);
-                        }
-                        dateCutoff.setHours(13);
+                            while (dateCutoff.getDay() == 0 || dateCutoff.getDay() == 6) {
+                                dateCutoff.setDate(dateCutoff.getDate() - 1);
+                            }
+                            dateCutoff.setHours(13);
 
-                        if (dateCutoff <= new Date()) {
-                            return date;
-                        }
+                            if (dateCutoff <= new Date()) {
+                                return date;
+                            }
 
-                        // Todo: remove this once we launch.
-                        if (date < new Date('2016/04/01')) {
-                            return date;
+                            // Todo: remove this once we launch.
+                            if (date < new Date('2016/04/01')) {
+                                return date;
+                            }
                         }
-                    }
+                    });
                 });
             });
         });
