--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -19,12 +19,6 @@ h3 {
     margin-top: 0px;
 }
 
-label.checkbox-radio-label {
-    padding-top: 3px;
-    padding-left: 0px;
-    margin-bottom: 0px!important;
-}
-
 .no-border {
     border: 0;
 }
@@ -47,7 +41,7 @@ label.checkbox-radio-label {
 }
 
 .col-sm-4 {
-    padding-bottom: 0px!important;
+    padding-bottom: 0px !important;
 }
 
 .horizontal-scroll {
@@ -73,7 +67,11 @@ ul.dropdown-menu {
     box-shadow: 0 2px rgba(17, 16, 15, 0.1), 0 2px 10px rgba(17, 16, 15, 0.1) !important;
 }
 
-a#event-create {
+a.more-info {
+    margin-bottom: 10px;
+}
+
+a.new-btn {
     margin-bottom: 15px;
 }
 
@@ -138,7 +136,7 @@ a#remove_new_job_button {
 }
 
 .error-alert {
-    padding: 15px 0px 15px 0px;
+    padding: 0px 0px 15px 0px;
     border: 1px solid transparent
 }
 
@@ -181,9 +179,24 @@ label {
     width: 100%;
 }
 
+div.checkbox-label {
+    width: 30%;
+    position: relative;
+    margin: 0px 0px 5px 25px;
+    padding-top: 3px;
+}
+
+label.checkbox-label {
+    width: auto;
+}
+
 input#author {
     margin-bottom: 0px;
 }
+
+/*input#cpath {*/
+    /*margin-bottom: 5px;*/
+/*}*/
 
 input {
     margin-bottom: 15px;
@@ -202,6 +215,11 @@ select#school-selector {
 
 select.large-select {
     width: 100%;
+}
+
+select.pika-select {
+    width: auto;
+    margin-bottom: 0px;
 }
 
 .radio label {
@@ -225,7 +243,7 @@ textarea {
 }
 
 .modal-backdrop {
-    z-index: 0;
+    z-index: -1;
 }
 
 /* todo: come up with a way to generalize these tags */
@@ -235,35 +253,35 @@ select#heading {
 }
 
 div#cke_biography {
-    margin: 0px 15px 10px 15px;
+    margin: 0px 0px 10px 0px;
 }
 
 div#cke_courses {
-    margin: 0px 15px 10px 15px;
+    margin: 0px 0px 10px 0px;
 }
 
 div#cke_awards {
-    margin: 0px 15px 10px 15px;
+    margin: 0px 0px 10px 0px;
 }
 
 div#cke_publications {
-    margin: 0px 15px 10px 15px;
+    margin: 0px 0px 10px 0px;
 }
 
 div#cke_presentations {
-    margin: 0px 15px 10px 15px;
+    margin: 0px 0px 10px 0px;
 }
 
 div#cke_certificates {
-    margin: 0px 15px 10px 15px;
+    margin: 0px 0px 10px 0px;
 }
 
 div#cke_organizations {
-    margin: 0px 15px 10px 15px;
+    margin: 0px 0px 10px 0px;
 }
 
 div#cke_hobbies {
-    margin: 0px 15px 10px 15px;
+    margin: 0px 0px 10px 0px;
 }
 
 div#cke_sponsors {
@@ -287,7 +305,7 @@ div#cke_registration_details {
 
 .card {
     background-color: #F5F5F5;
-    box-shadow: inset 0 0px 0px rgba(0,0,0,0);
+    box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0);
 }
 
 .nav .active a {
@@ -300,7 +318,7 @@ div#cke_registration_details {
 
 ul.dropdown-menu a:hover {
     background-color: #555555;
-    color: #f5f5f5!important;
+    color: #f5f5f5 !important;
 }
 
 .sidebar-wrapper {
@@ -309,11 +327,6 @@ ul.dropdown-menu a:hover {
 
 .navbar-brand {
     color: #FFFFFF !important;
-}
-
-.navbar-brand:hover {
-    background-color: #FFFFFF;
-    opacity: .75;
 }
 
 .icon-bar {
@@ -424,6 +437,69 @@ label {
     font-family: Muli, Helvetica Neue, sans-serif;
 }
 
+/* Checkbox inputs */
+
+input[type='checkbox'] {
+    -webkit-appearance: none;
+	background-color: #FFFFFF;
+	border: 2px solid #9A9A9A;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+	padding: 2px;
+	border-radius: 3px;
+	display: inline-block;
+	position: relative;
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    float: left;
+    opacity: .5;
+}
+
+input[type='checkbox']:active, input[type='checkbox']:checked:active {
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+    cursor: pointer;
+    opacity: 1;
+}
+
+input[type='checkbox']:checked {
+	background-color: #FFFFFF;
+	border: 2px solid #66615b;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05),
+    inset 0px -15px 10px -12px rgba(0,0,0,0.05),
+    inset 15px 10px -12px rgba(255,255,255,0.1);
+	color: #66615b;
+    cursor: pointer;
+    opacity: 1;
+}
+
+input[type='checkbox']:checked:after {
+    content: '\2713';
+	font-size: 19px;
+	position: absolute;
+	top: -5px;
+	left: -1px;
+	color: #66615b;
+}
+
+input[type='checkbox']:hover:after {
+    content: '\2713';
+	font-size: 19px;
+	position: absolute;
+	top: -5px;
+	left: -1px;
+	color: #66615b;
+    border-color: #66615b
+}
+
+input[type='checkbox']:checked:hover:after {
+    content: '\2713';
+	font-size: 19px;
+	position: absolute;
+	top: -5px;
+	left: -1px;
+	color: #66615b;
+}
+
 @media (min-width: 992px) {
     .navbar .navbar-header {
         margin: 0px !important;
@@ -437,7 +513,7 @@ label {
     }
 }
 
-@media(max-width: 450px) {
+@media (max-width: 450px) {
     input {
         border: 1px solid #CCCCCC;
     }
