--- a/tinker/e_announcements/templates/form.html
+++ b/tinker/e_announcements/templates/form.html
@@ -101,6 +101,10 @@
                                 {% if column in item.object_data %}
                                     {# zero-based indexing #}
                                     {{ item }}
+{#                                        <label class="checkbox" for="checkbox1">#}
+{#                                            <input id="checkbox1" type="checkbox" data-toggle="checkbox" value="{{ brm[loop.index - 1] }}">#}
+{#                                            {{ brm[loop.index - 1] }}#}
+{#                                        </label>#}
 {#                                    <input id="banner_roles-{{ loop.index - 1 }}" name="banner_roles" type="checkbox">#}
                                     <div class="checkbox-label">
                                         <label class="checkbox-label">{{ brm[loop.index - 1] }}</label>
