Get Office Hours to show up
Form still doesn’t show up but fix coming soon to a computer near you

--- a/tinker/templates/creativeTim_nav_collapse.html
+++ b/tinker/templates/creativeTim_nav_collapse.html
@@ -59,6 +59,21 @@
                         {% endif %}
                     </li>
                 {% endif %}
+                {% if 'office-hours/' in request.path %}
+                    <li class="active">
+                        <a href="/office-hours">
+                            <i class="ti-alarm-clock"></i>
+                            <p>Office Hours</p>
+                        </a>
+                    </li>
+                {% else %}
+                    <li>
+                        <a href="/office-hours">
+                            <i class="ti-alarm-clock"></i>
+                            <p>Office Hours</p>
+                        </a>
+                    </li>
+                {% endif %}
                 {% if 'e-announcement/' in request.path %}
                     <li class="active">
                         <a href="/e-announcement">
